--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wheelerlab_kicad_library"]
-	path = wheelerlab_kicad_library
-	url = http://microfluidics.utoronto.ca/git/wheelerlab_kicad_library.git
+	path = library
+	url = http://microfluidics.utoronto.ca/git/kicad___wheelerlab_library.git
+[submodule "library"]
+	path = library
+	url = http://microfluidics.utoronto.ca/git/kicad___wheelerlab_library.git
